lots of refactorings
* simplifications
* bugfixes
* fixed tests
* removal of duplicated or unused code
* Java 7 features
* changes to Encoder/Decoder interfaces
* new Format object instead of strings or XmlBeans objects